--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Instructora de esquí independiente - Clases personalizadas para todas las edades</p>
             </div>
+            <a href="https://web.whatsapp.com/"><img src="./imagenes/wsp.png" alt="Foto wsp"> </a>
         </header>
         <!-- Portfolio Section-->
         <div class="container">
